# tree-sitter-cmake

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.rst  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  index.cjs  index.mjs  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yaml
bindings/c/: tree-sitter-cmake.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_cmake/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCmakeTests/: TreeSitterCmakeTests.swift
bindings/zig/: root.zig  test.zig
corpus/: block_commands.txt  bracket_argument.txt  comment.txt  condition.txt  escape_sequence.txt  foreach.txt  function_calls.txt  gen_exp.txt  message.txt  parentheses.txt  quoted_argument.txt  unquoted_argument.txt  while.txt
npm-test/cjs/: smoke.test.cjs
npm-test/mjs/: smoke.test.mjs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/: test2.cmake
test/corpus/: block_commands.txt  bracket_argument.txt  comment.txt  message.txt  parentheses.txt  regression.txt
test/highlight/: block.cmake
tools/: case-insensitize.py
