[package]
name = "tree-sitter-cmake"
description = "CMake grammar for tree-sitter"
version = "0.6.0"
authors = ["Uy Ha"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "cmake"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/uyha/tree-sitter-cmake"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.2"
